Wed Apr 19 23:50:48 2006  Tim Janik  <timj@gtk.org>

	* bseblockutils.hh, bseblockutils.cc: new files which provide a couple
	utility functions for operations on blocks of floats and ints.

	* tests/blocktests.cc: test the new block utils.

	* bseplugin.c: added hook nodes to allow specialized plugins.

	* bseexports.h: added BseExportNodeHook. 

	* bsecxxplugin.hh: added BSE_CXX_REGISTER_STATIC_HOOK() and
	BSE_CXX_REGISTER_HOOK().
        
	* Makefile.am: fixed up clean rules so stamp files
	are properly deleted and dependent files are properly built.

Wed Apr 19 02:41:55 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am:
	(CLEANFILES): don't add @PERLRULE@ to CLEANFILES, as this can cause 
	its contents to be partially commented out. instead, add 
	$(bse_proc_gen_sources) conditionally to MAINTAINERCLEANFILES
	or CLEANFILES, depending on the AM conditional WITH_PERLRULE.

Sat Apr 15 03:11:18 2006  Tim Janik  <timj@gtk.org>

	* bse/bseplugin.c: use BirnetCPUInfo to determine whether to load
	plugins with .SSE extension.

	* bse/bsemain.[hc]: added BseMainArgs.force_fpu, settable 
	via --bse-force-fpu.

Fri Apr 14 02:18:51 2006  Tim Janik  <timj@gtk.org>

	* bsesequencer.cc: moved everything extern "C" and everything static
	out of the anon namespace. leave just C++ class definitions inside
	namespace anon. this fixes C API linking errors with gcc-4.2.

Thu Apr 13 23:56:01 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: fixed regeneration of files in srcdir.

	* bseplugin.c: filter out plugins that don't end in .FPU.*.

Tue Apr 11 23:38:11 2006  Tim Janik  <timj@gtk.org>

	* tests/Makefile.am:
	* Makefile.am: make dist fixes, conditionalize perl rules.

Sat Apr  8 02:09:15 2006  Tim Janik  <timj@gtk.org>

	* bseloader-mad.c:
	* bseloader-wav.c: use basename instead of full file path for internal
	wave names.

Tue Apr  4 21:59:39 2006  Tim Janik  <timj@gtk.org>

	* tests/cutvorbis.c:
	* tests/magictest.c:
	* tests/mathtests.c:
	* Makefile.am: removed tools.
